--- a/User_Registration_Page.html
+++ b/User_Registration_Page.html
@@ -52,7 +52,7 @@
 
     input[type="submit"] {
       padding: 12px;
-      background-color:#4CAF50;
+      background-color: #2196F3;
       color: white;
       font-size: 16px;
       border: none;
@@ -71,7 +71,7 @@
     }
 
     a {
-      color: #4CAF50;
+      color: #2196F3;
       text-decoration: none;
       font-weight: bold;
     }
