--- a/User_Reset_Password_Page.html
+++ b/User_Reset_Password_Page.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
-  <title>User Login</title>
+  <title>Reset Password</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -15,11 +14,11 @@
       margin: 0;
     }
 
-    .container {
+    .reset-container {
       background: #fff;
       padding: 30px 40px;
       border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 0 15px rgba(0,0,0,0.1);
       width: 100%;
       max-width: 400px;
     }
@@ -41,7 +40,7 @@
       color: #555;
     }
 
-    input[type="text"],
+    input[type="email"],
     input[type="password"] {
       padding: 10px;
       margin-bottom: 15px;
@@ -52,7 +51,7 @@
 
     input[type="submit"] {
       padding: 12px;
-      background-color: #4CAF50;
+      background-color: #FF9800;
       color: white;
       font-size: 16px;
       border: none;
@@ -62,7 +61,7 @@
     }
 
     input[type="submit"]:hover {
-      background-color: #45a049;
+      background-color: #F57C00;
     }
 
     p {
@@ -71,7 +70,7 @@
     }
 
     a {
-      color: #4CAF50;
+      color: #FF9800;
       text-decoration: none;
       font-weight: bold;
     }
@@ -79,29 +78,24 @@
     a:hover {
       text-decoration: underline;
     }
-    .fogetPassword {
-      text-align: right;
-      margin-top: -10px;
-    }
   </style>
 </head>
-
 <body>
-  <div class="container">
-    <h1>User Login</h1>
-    <form action="login_action" method="post">
-      <label for="username">Email:</label>
-      <input type="text" id="username" name="username" required>
+  <div class="reset-container">
+    <h1>Reset Password</h1>
+    <form action="reset_action" method="post">
+      <label for="email">Enter your email address:</label>
+      <input type="email" id="email" name="email" required>
 
-      <label for="password">Password:</label>
+      <label for="password">Enter new password:</label>
       <input type="password" id="password" name="password" required>
-      <p class="fogetPassword"><a href="User_Reset_Password_Page.html">Forgot Password?</a></p>
 
-      <input type="submit" value="Login"><br>
-      <p>Don't have an account? <a href="User_Registration_Page.html">Register here</a></p>
+      <label for="confirm">Confirm password:</label>
+      <input type="password" id="confirm" name="confirm" required>
+
+      <input type="submit" value="Reset Password">
     </form>
-    <p><a href="index.html">Back to Home</a></p>
+    <p><a href="User_Login_Page.html">Back to login</a></p>
   </div>
 </body>
-
 </html>
