--- a/typing_test.html
+++ b/typing_test.html
@@ -4,37 +4,38 @@
     <title>Typing Test</title>
     <style>
         body {
-            background: linear-gradient(135deg, #f8fafc 0%, #e0e7ef 100%);
+            background: linear-gradient(135deg, #000000 0%, #2f0062 100%); 
             font-family: 'Segoe UI', Arial, sans-serif;
             margin: 0;
             min-height: 100vh;
             display: flex;
             align-items: center;
             justify-content: center;
-            background-image:url('https://onlinetyping.in/images/typing-test.jpg');
+            
             background-repeat: no-repeat;
             background-size: cover;
         }
         .container {
-            background: #fff;
+            background:linear-gradient(135deg, #2f0062 0%, #212121 100%); ;
             border-radius: 18px;
             box-shadow: 0 8px 32px rgba(60, 60, 120, 0.15);
             padding: 36px 32px 28px 32px;
-            max-width: 420px;
+            max-width: 1000px;
+            height: 500px;
             width: 100%;
             text-align: center;
         }
         h1 {
             margin-bottom: 18px;
             font-size: 2.1em;
-            color: #2d3a4a;
+            color: #ffffff;
             letter-spacing: 1px;
         }
         #test-text {
             font-size: 1.15em;
             margin-bottom: 18px;
-            color: #4b5563;
-            background: #f3f4f6;
+            color: #031227;
+            background: #51bcff;
             border-radius: 8px;
             padding: 12px 10px;
             font-family: 'Fira Mono', 'Consolas', monospace;
@@ -47,12 +48,12 @@
         textarea {
             width: 100%;
             font-size: 1.08em;
-            border: 1.5px solid #cbd5e1;
+            border: 1.5px solid #51bcff;
             border-radius: 7px;
             padding: 10px;
             margin-bottom: 10px;
             resize: vertical;
-            background: #f9fafb;
+            background: #51bcff;
             transition: border 0.2s;
         }
         textarea:focus {
