--- a/User_Login_Page.html
+++ b/User_Login_Page.html
@@ -95,7 +95,7 @@
 
       <label for="password">Password:</label>
       <input type="password" id="password" name="password" required>
-      <p class="fogetPassword"><a href="User_Reset_Password_Page.html">Forgot Password?</a></p>
+      <p class="fogetPassword"><a href="User_Reset_Password.html">Forgot Password?</a></p>
 
       <input type="submit" value="Login"><br>
       <p>Don't have an account? <a href="User_Registration_Page.html">Register here</a></p>
